update menu for sample
+ Search Now
+ Weather

--- a/Sample/AndroidManifest.xml
+++ b/Sample/AndroidManifest.xml
@@ -22,6 +22,28 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.cardplus.SearchNow"
+            android:label="Search Now" 
+            android:parentActivityName="com.cardplus.MainActivity"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.cardplus.weather"
+            android:label="Search Now" 
+            android:parentActivityName="com.cardplus.MainActivity"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
